# starter_fastapi_react_kit

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: backend.yml  deploy.yml  frontend.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  router.py  uploads.py
backend/app/core/: __init__.py  config.py  database.py  redis.py  security.py
backend/app/middleware/: cors.py
backend/app/models/: user.py
backend/app/repositories/: base.py  user.py
backend/app/schemas/: __init__.py  common.py  user.py
backend/app/services/: __init__.py  auth.py  file_upload.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_health.py
database/: init.sql
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: DEVELOPER_GUIDE.md  api.md  architecture.md  backend.md  competition-checklist.md  deployment.md  frontend.md
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ThemeToggle.tsx
frontend/src/features/auth/: index.ts  types.ts
frontend/src/layouts/: AppLayout.tsx  AuthLayout.tsx
frontend/src/lib/: axios.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  UploadPage.tsx
frontend/src/providers/: index.ts  query-provider.tsx  theme-provider.tsx
frontend/src/routes/: ProtectedRoute.tsx  index.tsx
scripts/: setup.sh
(+2 files in other folders)
